// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`application 1`] = `
"<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Capital</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"capital\\"
                        data-autocomplete=\\"/capitals.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"capital\\">
                <li>Nothing</li>
            </ul>
        </div>
    </div>
</div>
<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Country</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"country\\"
                        data-autocomplete=\\"/countries.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"country\\">
                <li>Nothing</li>
            </ul>
        </div>
    </div>
</div>
"
`;

exports[`application 2`] = `
"<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Capital</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"capital\\"
                        data-autocomplete=\\"/capitals.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"capital\\">
                <li>Nothing</li>
            </ul>
        </div>
    </div>
</div>
<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Country</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"country\\"
                        data-autocomplete=\\"/countries.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"country\\">
                <li>Nothing</li>
            </ul>
        </div>
    </div>
</div>
"
`;

exports[`application 2 1`] = `
"<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Capital</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"capital\\"
                        data-autocomplete=\\"/capitals.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"capital\\">
                <li>Nothing</li>
            </ul>
        </div>
    </div>
</div>
<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Country</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"country\\"
                        data-autocomplete=\\"/countries.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"country\\">
                <li>Nothing</li>
            </ul>
        </div>
    </div>
</div>
"
`;

exports[`application 2 2`] = `
"<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Capital</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"capital\\"
                        data-autocomplete=\\"/capitals.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"capital\\">
                <li>Nothing</li>
            </ul>
        </div>
    </div>
</div>
<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Country</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"country\\"
                        data-autocomplete=\\"/countries.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"country\\">
                <li>russia</li>
            </ul>
        </div>
    </div>
</div>
"
`;

exports[`application 2 3`] = `
"<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Capital</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"capital\\"
                        data-autocomplete=\\"/capitals.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"capital\\">
                <li>Nothing</li>
            </ul>
        </div>
    </div>
</div>
<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Country</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"country\\"
                        data-autocomplete=\\"/countries.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"country\\">
                <li>Nothing</li>
            </ul>
        </div>
    </div>
</div>
"
`;

exports[`application 3`] = `
"<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Capital</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"capital\\"
                        data-autocomplete=\\"/capitals.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"capital\\">
                <li>Nothing</li>
            </ul>
        </div>
    </div>
</div>
<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Country</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"country\\"
                        data-autocomplete=\\"/countries.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"country\\">
                <li>Nothing</li>
            </ul>
        </div>
    </div>
</div>
"
`;

exports[`application 4`] = `
"<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Capital</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"capital\\"
                        data-autocomplete=\\"/capitals.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"capital\\">
                <li>mariehamn</li>
                <li>manama</li>
                <li>minsk</li>
                <li>moroni</li>
            </ul>
        </div>
    </div>
</div>
<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Country</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"country\\"
                        data-autocomplete=\\"/countries.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"country\\">
                <li>Nothing</li>
            </ul>
        </div>
    </div>
</div>
"
`;

exports[`application 5`] = `
"<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Capital</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"capital\\"
                        data-autocomplete=\\"/capitals.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"capital\\">
                <li>moroni</li>
                <li>monrovia</li>
                <li>monaco</li>
                <li>moscow</li>
            </ul>
        </div>
    </div>
</div>
<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Country</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"country\\"
                        data-autocomplete=\\"/countries.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"country\\">
                <li>Nothing</li>
            </ul>
        </div>
    </div>
</div>
"
`;

exports[`application 6`] = `
"<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Capital</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"capital\\"
                        data-autocomplete=\\"/capitals.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"capital\\">
                <li>moscow</li>
            </ul>
        </div>
    </div>
</div>
<div class=\\"container\\">
    <div class=\\"row\\">
        <div class=\\"col-6\\">
            <form class=\\"form-inline\\">
                <div class=\\"form-group\\">
                    <label>Country</label>
                    <input
                        class=\\"ml-2 form-control\\"
                        type=\\"text\\"
                        data-autocomplete-name=\\"country\\"
                        data-autocomplete=\\"/countries.json\\"
                    />
                </div>
            </form>
        </div>
        <div class=\\"col-6\\">
            <ul data-autocomplete-name=\\"country\\">
                <li>Nothing</li>
            </ul>
        </div>
    </div>
</div>
"
`;
